feat: nvm安装库权限问题

--- a/02.tips/999.其他/01.装机必备.md
+++ b/02.tips/999.其他/01.装机必备.md
@@ -25,6 +25,8 @@ tags:
 
 ### iShot截图软件
 
+### The Unarchiver解压缩软件
+
 ### SwitchHosts host文件修改
 
 [switchHosts](https://github.com/oldj/SwitchHosts/releases)
@@ -111,6 +113,35 @@ nvm alias default xxx
 1. 使用nvm切换到不能的node，对应npm也会变化
 2. npm变化之后，不同版本的npm安装的全局插件 ，无法共通。比如用npm@10安装的pnpm，npm@11找不到pnpm
 3. 每次终端重新打开，nvm都会回到 node 的 default版本
+:::
+
+:::danger
+nvm一个很重要的作用就是 ***避免全局安装的权限问题***，但是仍然出现`EACCES: permission denied`问题，是什么原因？
+
+1. 首先`EACCES: permission denied`报错是指权限不足
+2. 最常见的原因是：目录所有权被意外修改（最常见）​​
+    - 若你曾用sudo安装过全局包（如`sudo npm install -g pnpm`），会导致`~/.nvm`目录或其子目录（如`~/.nvm/versions/node/<version>/lib/node_modules`）的所有权变为`root`。后续用`普通用户`执行`npm`或`pnpm`命令时，因无写入权限而报错（`EACCES: permission denied`）
+
+```bash
+sudo chown -R <yourusername> ~/.nvm
+
+open ~/.zshrc
+
+## 确保有以下信息
+# nvm环境变量配置
+export NVM_DIR="$HOME/.nvm"
+[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # 加载nvm
+[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # 加载自动补全
+
+# 重启
+source ~/.zshrc
+
+
+# 检查npm的全局安装路径是否在~/.nvm目录下
+# 若输出为/home/<your_username>/.nvm/versions/node/<version>，则说明配置正确。
+npm config get prefix
+```
+
 :::
 
 ### npm + nrm
@@ -331,6 +362,9 @@ brew install thefuck
 11. React Snippets(有AI，现在可能用处不大)
 12. Vue Snippets(有AI，现在可能用处不大)
 13. Vetur
+
+### 数据库工具
+1. MongoDB for VS Code
 
 ### 主题类工具
 1. vscode-icons: 文件夹、文件图标
